# cleanCppProject

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  cleanCppProject.sublime-project  emptyCppProject.sublime-project  license.md  makebuildrun.sh  ninjabuildrun.sh  readme.md
.github/workflows/: github-ci-run-cmake.yml  githubci.yml
cmake/: cleanCppExtensions.cmake  sanitizers.cmake  useGoldLinker.cmake
data/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in  design.md  directoryStructure.md  start_working.md
doc/doxygen/: Doxyfile.in  customdoxygen.css  footer.html  header.html
packaging/: CMakeLists.txt  DS_Store.scpt  example.desktop  example.icon.in.rc  exampleApp.desktop  exampleApp.icon.in.rc
source/: .ycm_extra_conf.py  CMakeLists.txt  SomeClass.cpp  SomeClass.h  main.cpp  version.cpp.in  version.h
source/unittest/: CMakeLists.txt  testmain.cpp
test/: CMakeLists.txt  testmain.cpp
